<resources>
    <string name="app_name">Oxxito2019</string>
    <string name="lbl_registrar">Registrar Productos</string>
    <string name="lbl_iniciar">Iniciar Bd</string>
    <string name="lbl_registro">Registro</string>
    <string name="lbl_codigo">Codigo</string>
    <string name="lbl_nombre_producto">Nombre del Producto</string>
    <string name="lbl_precio">Precio</string>
    <string name="lbl_existencia">Existencia</string>
    <string name="lbl_fecha_caducidad">Fecha de Caducidad</string>
    <string name="lbl_guardar">Guardar</string>
    <string name="lbl_cancelar">Cancelar</string>
    <string name="lbl_actualizar">Actualizar</string>
    <string name="lbl_eliminar">Eliminar</string>
    <string name="lbl_gestion">Gestión de Productos</string>
    <string name="lbl_nuevo">Nuevo Producto</string>
</resources>
